[package]
name = "tezos-codec"
version = "0.1.0"
edition = "2021"

[lib]
name = "tezos_codec"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tezos-data-model = { git = "https://github.com/tezos-codec-generator/tezos-data-model" }
tezos-codegen = { git = "https://gitlab.com/archaephyrryx/codec_generator", features = [
    "lima",
    "kathmandu",
], branch = "external-runtime" }
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4.3"
num = "0.4.0"
sha2 = "0.10.6"
base58 = "0.2.0"
