[package]
name = "tezos-codec"
version = "0.1.0"
edition = "2021"

[lib]
name = "tezos_codec"
bench = false

[features]
no_codec = []
lima = ["tezos-codegen/lima"]
mumbai = ["tezos-codegen/mumbai"]
default = ["lima", "mumbai"]

[dependencies.tezos-codegen]
optional = true
git = "https://gitlab.com/archaephyrryx/codec_generator"
branch = "external-runtime"
default-features = false

[dependencies]
tezos-data-model = { git = "https://github.com/tezos-codec-generator/tezos-data-model", features = ["serde_impls"] }
serde = { version = "1.0", features = ["derive"] }
num-bigint = { version = "0.4.3", features = ["serde"] }
num = "0.4.0"
sha2 = "0.10.6"
base58 = "0.2.0"
chrono = { version = "0.4.24", features = ["std", "serde"] }
